<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.tudresden</groupId>
	<artifactId>de.tudresden.slr.parent</artifactId>
	<version>0.5.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Systematic Literature Review</name>
	<description>Bla bla</description>

	<organization>
		<name>Technische Universität Dresden</name>
		<url>http://st.inf.tu-dresden.de</url>
	</organization>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/sebastiangoetz/slr-toolkit/issues</url>
	</issueManagement>

	<scm>
		<url>https://github.com/sebastiangoetz/slr-toolkit</url>
		<connection>scm:git:git://github.com/sebastiangoetz/slr-toolkit.git
		</connection>
		<developerConnection>
			scm:git:git@github.com:sebastiangoetz/slr-toolkit.git
		</developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<tycho-groupid>org.eclipse.tycho</tycho-groupid>
		<tycho.version>3.0.4</tycho.version>
		<tycho-extras.version>3.0.4</tycho-extras.version>
		<xtextVersion>2.31.0</xtextVersion>
		<mwe2Version>2.14.0</mwe2Version>
		<project.build.sourceEncoding>windows-1252</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgument>-err:-forbidden</compilerArgument>
					<useProjectSettings>false</useProjectSettings>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho.version}</version>
				<!-- <configuration> <useUIHarness>true</useUIHarness>
				</configuration> -->
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>de.tudresden</groupId>
							<artifactId>de.tudresden.slr.target</artifactId>
							<version>0.5.0-SNAPSHOT</version>
						</artifact>
					</target>
					<pomDependencies>consider</pomDependencies>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>aarch64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtextVersion}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>testCompile</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
						<testOutputDirectory>${basedir}/xtend-gen</testOutputDirectory>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<filesets>
							<fileset>
								<directory>${basedir}/xtend-gen</directory>
								<includes>
									<include>**/*</include>
								</includes>
							</fileset>
						</filesets>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											build-helper-maven-plugin
										</artifactId>
										<versionRange>
											[1.9.1,)
										</versionRange>
										<goals>
											<goal>add-resource</goal>
											<goal>add-source</goal>
											<goal>add-test-resource</goal>
											<goal>add-test-source</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.eclipse.xtext</groupId>
				<artifactId>xtext-dev-bom</artifactId>
				<version>${xtextVersion}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<profiles>
		<profile>
			<id>skipUnitAndUiTests</id>
			<properties>
				<skipTests>true</skipTests>
			</properties>
		</profile>
		<profile>
			<id>macos</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
				<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
			</properties>
		</profile>
		<profile>
			<id>jdk9-or-newer</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
			</properties>
		</profile>
	</profiles>
	<modules>
		<module>../../targets/de.tudresden.slr.target</module>
		<module>../de.tudresden.slr.wizards</module>
		<module>../../features/de.tudresden.slr.app.feature</module>
		<module>../de.tudresden.slr.app</module>
		<module>../../features/de.tudresden.slr.product</module>
		<module>../de.tudresden.slr.model.taxonomy</module>
		<module>../de.tudresden.slr.model.taxonomy.ide</module>
		<module>../de.tudresden.slr.model.taxonomy.ui</module>
		<!--module>../de.tudresden.slr.model.taxonomy.tests</module>
		<module>../de.tudresden.slr.model.taxonomy.ui.tests</module-->
		<module>../de.tudresden.slr.model.bibtex</module>
		<module>../de.tudresden.slr.model.bibtex.edit</module>
		<module>../de.tudresden.slr.model.modelregistry</module>
		<module>../de.tudresden.slr.ui.chart</module>
		<module>../de.tudresden.slr.model.bibtex.ui</module>
		<module>../de.tudresden.slr.googlescholar</module>
		<module>../de.tudresden.slr.utils</module>
		<module>../de.tudresden.slr.metainformation</module>
		<module>../de.tudresden.slr.latexexport</module>
		<module>../de.tudresden.slr.questionnaire</module>
		<module>../de.tudresden.slr.classification</module>
		<!-- parent test module -->
		<module>
			../../tests/de.tudresden.slr.tests.parent
		</module>
		<module>
			../../tests/de.tudresden.slr.latexexport.tests
		</module>
		<module>
			../../tests/de.tudresden.slr.metainformation.tests
		</module>
		<module>
			../../tests/de.tudresden.slr.model.bibtex.tests
		</module>
		<module>
			../../tests/de.tudresden.slr.googlescholar.tests
		</module>
		<module>../../tests/de.tudresden.slr.utils.tests</module>
		<module>
			../../tests/de.tudresden.slr.questionnaire.tests
		</module>
		<module>
			../../tests/de.tudresden.slr.model.modelregistry.tests
		</module>
		<module>
			../../tests/de.tudresden.slr.classification.tests
		</module>
		<!-- IMPORTANT keep at the bottom -->
		<module>../../tests/de.tudresden.slr.uitests</module>
	</modules>

	<repositories>
		<repository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see
				https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<!-- This must be disabled explicitly, otherwise it is enabled by
		https://github.com/mojohaus/mojo-parent 
			which is taken from exec-maven-plugin from at least version 1.6.0 -->
		<repository>
			<id>ossrh-snapshots</id>
			<name>ossrh-snapshots</name>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
		<!-- This is enabled by /org/sonatype/oss/oss-parent/7 used as parent by 
			org/xtext/antlr-generator/3.2.1 -->
		<repository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see
				https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>ossrh-snapshots</id>
			<name>ossrh-snapshots</name>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
		</pluginRepository>
		<pluginRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
